fix: reduce gap in CardDashs_container for improved layout consistency

--- a/ppe-front/src/pages/Admin/Dashboard/styles.module.css
+++ b/ppe-front/src/pages/Admin/Dashboard/styles.module.css
@@ -49,7 +49,7 @@ body {
 
 .container_desenpenho .CardDashs_container {
   display: flex;
-  gap: 25px;
+  gap: 8px;
   flex-wrap: wrap;
   justify-content: space-between;
 }
